manifests/flux-patch.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: matarisvan
spec:
  template:
    spec:
      $setElementOrder/containers:
      - name: trader
      containers:
      - image: eu.gcr.io/decisive-cinema-167507/matarisvan:8a7d3c8
        name: trader
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prod-isaacranks-rebuild
  namespace: default
spec:
  template:
    spec:
      $setElementOrder/containers:
      - name: rebuildranks
      containers:
      - image: eu.gcr.io/decisive-cinema-167507/isaacranks:1.0.12
        name: rebuildranks
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prod-isaacranks-web
  namespace: default
spec:
  template:
    spec:
      $setElementOrder/containers:
      - name: isaacranks
      containers:
      - image: eu.gcr.io/decisive-cinema-167507/isaacranks:1.0.12
        name: isaacranks
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    fluxcd.io/automated: "true"
  name: test-isaacranks-rebuild
  namespace: default
spec:
  template:
    spec:
      $setElementOrder/containers:
      - name: rebuildranks
      containers:
      - image: eu.gcr.io/decisive-cinema-167507/isaacranks:1.0.12
        name: rebuildranks
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    fluxcd.io/automated: "true"
  name: test-isaacranks-web
  namespace: default
spec:
  template:
    spec:
      $setElementOrder/containers:
      - name: isaacranks
      containers:
      - image: eu.gcr.io/decisive-cinema-167507/isaacranks:1.0.12
        name: isaacranks
