manifests/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: global-ingress
  annotations:
    kubernetes.io/ingress.class: 'gce'
    kubernetes.io/ingress.global-static-ip-name: 'k8s-fw-default-global-ingress--6928bd11e243f349'
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - ucdapi.org
        - pb.codehash.net
        - qdb.codehash.net
        - graphs.mithrandi.net
        - test.isaacranks.com
        - www.isaacranks.com
      secretName: acme-tls
  rules:
    - host: ucdapi.org
      http:
        paths:
          - backend:
              serviceName: ucdapi
              servicePort: 80
    - host: pb.codehash.net
      http:
        paths:
          - backend:
              serviceName: codetip
              servicePort: 80
    - host: qdb.codehash.net
      http:
        paths:
          - backend:
              serviceName: lambdacircus
              servicePort: 80
    - host: graphs.mithrandi.net
      http:
        paths:
          - backend:
              serviceName: grafana
              servicePort: web
    - host: test.isaacranks.com
      http:
        paths:
          - backend:
              serviceName: isaacranks-test-isaacranks
              servicePort: web
    - host: www.isaacranks.com
      http:
        paths:
          - backend:
              serviceName: isaacranks-prod-isaacranks
              servicePort: web
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: global-ingress6
  annotations:
    kubernetes.io/ingress.global-static-ip-name: 'lbv6'
    kubernetes.io/ingress.class: 'gce'
spec:
  tls:
    - hosts:
        - ucdapi.org
        - pb.codehash.net
        - qdb.codehash.net
        - graphs.mithrandi.net
        - test.isaacranks.com
        - www.isaacranks.com
      secretName: acme-tls
  rules:
    - host: ucdapi.org
      http:
        paths:
          - backend:
              serviceName: ucdapi
              servicePort: 80
    - host: pb.codehash.net
      http:
        paths:
          - backend:
              serviceName: codetip
              servicePort: 80
    - host: qdb.codehash.net
      http:
        paths:
          - backend:
              serviceName: lambdacircus
              servicePort: 80
    - host: graphs.mithrandi.net
      http:
        paths:
          - backend:
              serviceName: grafana
              servicePort: web
    - host: test.isaacranks.com
      http:
        paths:
          - backend:
              serviceName: isaacranks-test-isaacranks
              servicePort: web
    - host: www.isaacranks.com
      http:
        paths:
          - backend:
              serviceName: isaacranks-prod-isaacranks
              servicePort: web
